feat: improve cli text output